--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
-altair==5.5.0
 annotated-types==0.7.0
 anyio==4.12.0
 async-timeout==4.0.3
@@ -96,7 +95,6 @@ pybase64==1.4.3
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
-pydeck==0.9.1
 Pygments==2.19.2
 pypdf==6.4.1
 PyPika==0.48.9
@@ -122,7 +120,8 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.44
-streamlit==1.51.0
+fastapi==0.115.6
+python-multipart==0.0.17
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
