--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.4.4
 chromadb==1.3.6
 click==8.3.1
 coloredlogs==15.0.1
+cryptography==43.0.3
 dataclasses-json==0.6.7
 distro==1.9.0
 durationpy==0.10
